# card_crm_server

./: .env  .gitignore  Cargo.toml  README.md  api.http
src/: main.rs
src/api/: db_api.rs  web_api.rs
src/api/web_api/: post.rs  web_api.rs
src/sql/: base.sql
