[package]
name = "card_crm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"
futures = "0.3.26"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
sqlx = { version = "0.6", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }

reqwest = { version = "0.11.14", features = ["cookies", "native-tls-vendored"] }
tl = { version = "0.7.7" }

dotenvy = "0.15.6"
