[package]
name = "card_crm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["ws", "macros"] }
tower-http = { version = "0.3.5", features = ["add-extension"] }

tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "rt"] }
tokio-stream = "0.1.11"
futures = "0.3.26"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
sqlx = { version = "0.6", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }

reqwest = { version = "0.11.14", features = [
    "cookies",
    "native-tls-vendored",
    "blocking",
] }
tl = { version = "0.7.7" }

once_cell = "1.17.1"

dotenvy = "0.15.6"
