[package]
name = "card_crm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws", "macros"] }
tower-http = { version = "0.4", features = ["add-extension"] }

tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "rt"] }
tokio-stream = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }

reqwest = { version = "0.11.14", features = [
    "cookies",
    "native-tls-vendored",
    "blocking",
] }

tl = { version = "0.7" }
once_cell = "1.17"
dotenvy = "0.15"
